--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,91 +1,81 @@
 body, html {
     margin: 0px;
     padding: 0px;
-    background-color: #ededed;
+    background-color: #171717;
     font-family: 'Trebuchet MS';
+	color: #F8F8F2;
 }
 
 .Container {
-    width: 90%;
+    width: 99%;
     min-width: 500px;
     margin: auto;
 }
 
 header {
-    width: 100%;
-    height: 120px;
-    line-height: 120px;
-    background-color: #313131;
+    width: calc(100% - 20px);
+    height: 80px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	padding-left: 20px;
+    line-height: 30px;
+    background-color: #272727;
     font-family: "Audiowide", sans-serif;
     font-weight: 400;
     font-style: normal;
+
 }
 
     header span {
         color: #fff;
-        font-size: 30px;
-        padding-left: 20px;
+        font-size: 50px;
+        padding-left: 0px;
+		padding-bottom: 0px;
     }
 
 nav {
     width: 100%;
-    height: 40px;
-    background-color: #ff6a00;
+    height: 8px;
+    background-color: #00441c;
 }
 
 .content {
     width: 100%;
     height: 700px;
     padding: 10px 0px;
-    background-color: #fff;
+    background-color: #282A36;
 }
 
 footer {
     width: 100%;
     height: 80px;
-    background-color: #808080;
+    background-color: #313131;
     margin-bottom: 20px;
 }
 
 .main_articles {
-    width: 70%;
+    width: calc(100% - 6px);
     float: left;
     height: 650px;
-    margin-left: 10px;
+    margin-left: 00px;
+	margin-right: 00px;
 }
 
-.side_article {
-    width: 25%;
-    float: right;
-    height: 600px;
-    border-left: 1px dotted #6d6d6d;
-}
 
 .siteDescription {
-    display: -moz-box; /* Firefox*/
-    display: -webkit-box; /* Chrome */
-    display: -ms-flexbox; /* IE 10 */
-    display: flexbox;
-    flex-direction: row;
-    flex-align:start;
-    width: 95%;
-    height: 150px;
+    width: 99%;
+    height: 200px;
 }
 
 .desImage {
-    -webkit-box-ordinal-group: 1; /* iOS 6-, Safari, Opera*/
-    -moz-box-ordinal-group: 1; /* Firefox*/
-    -ms-flex-order: 1; /* IE 10 */
-    -webkit-order: 1; /* Chrome */
-    flex-order: 1;
     width: 200px;
-    height: 150px;
+    height: 200px;
 }
 
     .desImage img {
         width: 200px;
-        height: 150px;
-        margin-left: 5px;
+        height: 200px;
+        margin-right: 5px;
         border: 2px solid #6d6d6d;
     }
 
@@ -96,18 +86,8 @@ footer {
     -ms-flex-order: 2; /* IE 10 */
     -webkit-order: 2; /* Chrome */
     flex-order: 2;
-    width: 70%;
-    height: 140px;
-    background-color: #e9e9e9;
+    width: 80%;
+    height: 200px;
+    background-color: #282A36;
     padding: 5px;
-}
-
-.ads {
-    width: 90%;
-    margin: auto;
-    margin-top: 10px;
-    height: 150px;
-    text-align: center;
-    padding-top: 10px;
-    background-color: #e5eff3;
 }
