--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,29 +63,24 @@ footer {
 
 
 .siteDescription {
-    width: 99%;
+    width: 100%;
     height: 200px;
 }
 
 .desImage {
-    width: 200px;
-    height: 200px;
+    width: 204px;
+    height: 204px;
+	margin-left: 15px;
 }
 
     .desImage img {
         width: 200px;
         height: 200px;
-        margin-right: 5px;
         border: 2px solid #6d6d6d;
     }
 
 .des {
     margin-left: 15px;
-    -webkit-box-ordinal-group: 2; /* iOS 6-, Safari, Opera*/
-    -moz-box-ordinal-group: 2; /* Firefox*/
-    -ms-flex-order: 2; /* IE 10 */
-    -webkit-order: 2; /* Chrome */
-    flex-order: 2;
     width: 80%;
     height: 200px;
     background-color: #282A36;
